--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "marked": "^2.1.3",
     "monaco-editor": "^0.26.1",
     "vue": "^3.0.5"
   },
