--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "marked": "^2.1.3",
+    "markdown-it": "^12.1.0",
+    "markdown-it-container": "^3.0.0",
     "monaco-editor": "^0.26.1",
     "vue": "^3.0.5"
   },
